pricing page fix - css implemented - todo : 660 px 이하 디바이스에서 Ceter align

--- a/src/styles/pricing.css
+++ b/src/styles/pricing.css
@@ -1,6 +1,15 @@
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+
+
+
+
+.hangul_font{
+  font-family: 'Noto Sans KR', sans-serif;
+}
 
 
 body {
+  background-color: white;
   margin: 0 auto;
   min-width: 400px;
   height: 100%;
@@ -45,13 +54,14 @@ p img {
 }
 
 
-.step2, .step3 {
+.step1, .step2, .step3 {
+  display: inline-block;
   position: relative;
+  margin-bottom: 10px;
 }
 
 h2 {
   font-weight: bold;
-  font-size: 14px;
   text-align: center;
   padding: 5px 0;
   color: #000000;
@@ -73,8 +83,376 @@ h2 {
 }
 
 
+/*<style scoped>*/
+/** {margin: 0; padding: 0;}*/
+
+#pricing-container{
+  display: inline-block;
+  margin: 30px;
+  margin-right:0;
+  /*text-align: center;*/
+}
+
+#pricing-inside-container{
+  text-align: center;
+  margin: 10px auto;
+
+}
+
+#header {
+  height: 25px;
+  color: #fff;
+  background: #2F2E35;
+  font: 300 12px/25px Helvetica, Verdana, sans-serif;
+  text-align: center;
+}
+
+
+.pricing-contents{
+  margin:0 2.1em 0 2.1em ;
+  align-items: center;
+  text-align: center;
+}
+
+.pricing-contents a {
+  margin: auto;
+}
+
+/*Top Bar*/
+.pricing-card-top{
+  width: 100%; height: 50px;
+  background: #2F2E35;
+  -webkit-border-radius: 10px 10px 0 0;
+  -moz-border-radius: 10px 10px 0 0;
+  border-radius: 10px 10px 0 0;
+}
+
+.pricing-card-top h2 {
+  color: #fff;
+  text-align: center;
+  font: 500 2.5vw 'Noto Sans KR', sans-serif;
+  margin: 0;
+}
+
+
+
+.price{
+
+
+}
+
+.price h2{
+  text-align: center;
+  font-weight : 700;
+  font-size: 0.1vw;
+  font-family:'Noto Sans KR', sans-serif;
+  margin: 10px 0 0;
+
+}
+
+/*Shape*/
+.pricing-table {
+  height: 26em;
+  background: white;
+  margin: 0.3em;
+  float: left;
+
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 2px 2px 9px rgba(0,0,0,0.3);
+  -moz-box-shadow: 2px 2px 9px rgba(0,0,0,0.3);
+  box-shadow: 2px 2px 9px rgba(0,0,0,0.3);
+}
+
+/*Features*/
+.pricing-table .pricing-contents{
+}
+
+.pricing-table ul {
+  list-style-type: none;
+  font-weight: 400;
+  font-family: 'Noto Sans KR', sans-serif;
+  line-height: 200%;
+  margin: 20px 0 0 0;
+  padding: 0;
+  word-break: keep-all;
+}
+
+.pricing-table ul strong {
+  font-weight: bold;
+}
+
+/*Dividing Line*/
+.pricing-table hr {
+  border: 0;
+  background-color: #BCBEC0;
+  color: #BCBEC0;
+  height: 1px;
+  width: inherit;
+  margin: 20px 0 15px 15px;
+}
+
+/*Price*/
+.pricing-table h1 {
+  text-align: center;
+  font: bold 3vw Helvetica, Verdana, sans-serif;
+  margin: 0.1em 0 0 0;
+}
+
+.pricing-table h1 sup {
+  font-size: 45px;
+}
+
+.pricing-table p {
+  text-align: center;
+  font: 500 14px/1 Helvetica, Verdana, sans-serif;
+  color: #BCBEC0;
+}
+
+
+/*Button*/
+.pricing-table a {
+  display: inline-block;
+  height: 40px;
+  width: 10em;
+  color: #fff;
+  margin-top: 25px;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  font: 500 16px/40px Helvetica, Verdana, sans-serif;
+
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+
+  /*Gradient*/
+  background: #9dcc55; /* Old browsers */
+  background: -moz-linear-gradient(top,  #9dcc55 0%, #96c23d 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#9dcc55), color-stop(100%,#96c23d)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #9dcc55 0%,#96c23d 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #9dcc55 0%,#96c23d 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #9dcc55 0%,#96c23d 100%); /* IE10+ */
+  background: linear-gradient(top,  #9dcc55 0%,#96c23d 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9dcc55', endColorstr='#96c23d',GradientType=0 ); /* IE6-9 */
+}
+
+.pricing-table a:hover {
+  background: #b2e560; /* Old browsers */
+  background: -moz-linear-gradient(top,  #b2e560 0%, #96c23d 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b2e560), color-stop(100%,#96c23d)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #b2e560 0%,#96c23d 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #b2e560 0%,#96c23d 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #b2e560 0%,#96c23d 100%); /* IE10+ */
+  background: linear-gradient(top,  #b2e560 0%,#96c23d 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2e560', endColorstr='#96c23d',GradientType=0 ); /* IE6-9 */
+
+}
+
+
+/*Scaled Version*/
+.featured{
+  -webkit-transform: scale(1.1, 1.1);
+  -moz-transform: scale(1.1, 1.1);
+  -o-transform: scale(1.1, 1.1);
+  -ms-transform: scale(1.1, 1.1);
+  transform: scale(1.1, 1.1);
+}
+
+.container .card-1{
+  width: 30%;
+}
+.container .card-2{
+  width: 30%;
+}
+.container .card-3{
+  width: 30%;
+}
+
+.card-1 .pricing-card-top{
+  background: #3b838f;
+}
+.card-2 .pricing-card-top{
+  background: #6ac2ec;
+}
+.card-3 .pricing-card-top{
+  background: #2c5967;
+}
+
+
+
+
+
+/*MEDIA QUERY*/
+
+@media (min-width: 1200px) {
+  .pricing-card-top h2{
+    font-size : 30px;
+  }
+  .price h1 {
+    font-size: 45px;
+  }
+  .price h2 {
+    font-size: 18px;
+  }
+  .pricing-contents ul{
+    font-size : 18px;
+  }
+}
+
+@media (min-width: 1000px) and (max-width: 1199px) {
+  .pricing-card-top h2{
+    font-size : 30px;
+  }
+  .price h1 {
+    /*font-size: 45px;*/
+    font-size: 3.3vw;
+  }
+  .price h2 {
+    font-size: 1.8vw;
+  }
+  .pricing-contents ul{
+    font-size : 1.4vw;
+  }
+}
+
+
+
+/*for medium size screen*/
+@media  (min-width: 661px) and (max-width: 999px ) {
+  .pricing-table{
+    height: 340px;
+
+  }
+  .pricing-table{
+    margin: 3em 0 0 0;
+  }
+  .pricing-card-top{
+    width:100%;
+  }
+
+  #pricing-container .card-2 {
+    width: 33%;
+  }
+  #pricing-container .card-1 {
+    width: 33%;
+  }
+  #pricing-container .card-3 {
+    width: 33%;
+  }
+  .pricing-contents {
+    text-align: center;
+  }
+  .pricing-card-top h2{
+    font-size: 2.8vw;
+  }
+  .pricing-contents a{
+    text-align: center;
+    font-size: 1.6vw;
+    margin: 1vw auto;
+  }
+  .pricing-contents ul{
+    font-size: 1.5vw;
+    line-height: 180%;
+
+  }.price h1 {
+     font-size: 3.2vw;
+   }
+  .price h2 {
+    font-size: 2vw;
+  }
+
+}
+
+
+
+
+/*for medium small screen*/
+@media  (max-width: 660px ) {
+  body{
+    width: 100%;
+    display: inline-block;
+  }
+  .container{
+    text-align: center;
+  }
+  .pricing-table{
+    height: 260px;
+
+  }
+  .pricing-table{
+    margin: 3em 0 0 0;
+  }
+  .pricing-card-top{
+    width:100%;
+  }
+  .pricing-card-top h2{
+    vertical-align: middle;
+    line-height: 200%;
+  }
+
+  #pricing-container .card-1 {
+    margin: 0 auto;
+    width: 80%;
+  }
+  #pricing-container .card-2 {
+  margin: 4vw auto;
+  width: 80%;
+}
+  .featured{
+    margin: 0;
+  }
+
+  #pricing-container .card-3 {
+    margin: 1vw auto;
+    width: 80%;
+  }
+  .pricing-contents {
+    text-align: center;
+  }
+  .pricing-card-top h2{
+    font-size: 20px;
+  }
+  .pricing-contents a{
+    width: 100%;
+    /*line-height: 40%;*/
+    font-weight: 400;
+    font-size: 15px;
+    margin: 8px auto;
+  }
+  .pricing-contents ul{
+    font-size: 15px;
+    line-height: 130%;
+    margin: 0 auto;
+
+  }.price h1 {
+     font-size: 30px;
+   }
+  .price h2 {
+    line-height: 50%;
+    font-size: 20px;
+    margin: 4px auto;
+  }
+  .pricing-table hr {
+    border: 0;
+    height: 0.5px;
+    width: inherit;
+    margin: 10px auto;
+  }
+  p{
+    margin: 1px auto;
+  }
+
+
+}
+
+/*</style>*/
+
 @media screen and (max-width: 550px) {
   .container {
     width: 95%;
   }
 }
+
+
